# rag-project

./: .dockerignore  .env.example  .gitignore  README.md  document_loader.py  main.py  pyproject.toml  retriver.py  vector_store.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/rag/: cli.py
src/rag/api/: app.py  dependencies.py  middleware.py
src/rag/api/routes/: documents.py  health.py  query.py
src/rag/core/: config.py  exceptions.py
src/rag/generation/: cache.py  chain.py  prompts.py
src/rag/ingestion/: chunker.py  dedup.py  loader.py
src/rag/observability/: logging.py  metrics.py  tracing.py
src/rag/retrieval/: retriever.py  vector_store.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_config.py  test_dedup.py  test_prompts.py
